[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fpdataviewer", "fpdataviewer.mlab", "fpdataviewer.cli", "fpdataviewer.cli.analysis", "fpdataviewer.cli.plotting"]

[project]
name = "fpdataviewer"
version = "0.0.1"
authors = [
    { name="Thijmen Kuipers", email="t.p.w.kuipers@student.utwente.nl" },
]
description = "Reads first-principle molecular simulation data and graphs various statistics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-3.0-only"}
keywords = ["vasp", "descriptor", "machine learning", "atomic structure", "materials science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "numba",
    "scikit-learn",
    "dscribe",
    "ovito",
    "pyside6",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/dynamicsolids/FPdataViewer"

[project.scripts]
fpdataviewer = "fpdataviewer.cli.main:main"
